machines: fixed disk source alignments
Closes #10676

--- a/pkg/machines/machines.less
+++ b/pkg/machines/machines.less
@@ -33,8 +33,21 @@
     white-space: nowrap;
 }
 
+.machines-disks .listing-ct th:nth-last-child(-n+2),
+.machines-disks .listing-ct td:nth-last-child(-n+2) {
+    text-align: left;
+}
+
 .machines-disks-source {
-    float: right;
+    th, td {
+        padding: 0;
+        vertical-align: baseline;
+    }
+
+    th + td,
+    td + td {
+        padding-left: 0.5em;
+    }
 }
 
 .machines-disks-source-descr {
